--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "history": "1.13.1",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
+    "react-modal": "^0.6.1",
     "react-redux": "^4.0.0",
     "react-router": "1.0.1",
     "react-tap-event-plugin": "^0.2.1",
