--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dev:no-debug": "npm run dev -- --no_debug",
     "test": "node -r dotenv/config ./node_modules/karma/bin/karma start bin/karma.js",
     "test:dev": "npm run test -- --watch",
-    "deploy": "npm run test && npm run clean && npm run compile"
+    "deploy": "npm run test && npm run clean && npm run compile",
+    "api": "node ./bin/api.js"
   },
   "repository": {
     "type": "git",
@@ -25,7 +26,9 @@
   "dependencies": {
     "debug": "^2.2.0",
     "dotenv": "^1.2.0",
+    "es6-promise": "^3.0.2",
     "history": "1.13.1",
+    "isomorphic-fetch": "^2.2.1",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "react-modal": "^0.6.1",
@@ -34,8 +37,10 @@
     "react-tap-event-plugin": "^0.2.1",
     "redux": "^3.0.0",
     "redux-actions": "^0.9.0",
+    "redux-form": "^4.1.5",
     "redux-simple-router": "^1.0.0",
-    "redux-thunk": "^1.0.0",
+    "redux-thunk": "^1.0.3",
+    "restify": "^4.0.3",
     "yargs": "^3.18.0"
   },
   "devDependencies": {
@@ -50,11 +55,11 @@
     "babel-preset-stage-0": "^6.3.13",
     "babel-register": "^6.3.13",
     "babel-runtime": "^6.3.19",
-    "cssnano": "^3.3.2",
     "chai": "^3.4.1",
     "chai-as-promised": "^5.1.0",
     "connect-history-api-fallback": "^1.1.0",
     "css-loader": "^0.23.0",
+    "cssnano": "^3.3.2",
     "eslint": "^1.10.3",
     "eslint-config-standard": "^4.4.0",
     "eslint-config-standard-react": "^1.2.1",
