--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "compile": "node -r dotenv/config --harmony bin/compile",
     "lint": "eslint . ./",
     "lint:fix": "npm run lint -- --fix",
-    "start": "npm run dev",
+    "start": "npm run dev & npm run api",
     "dev": "node -r dotenv/config bin/server --hot",
     "dev:nw": "npm run dev -- --nw",
     "dev:no-debug": "npm run dev -- --no_debug",
     "test": "node -r dotenv/config ./node_modules/karma/bin/karma start bin/karma.js",
     "test:dev": "npm run test -- --watch",
     "deploy": "npm run test && npm run clean && npm run compile",
-    "api": "node ./bin/api.js"
+    "api": "node_modules/.bin/nodemon ./bin/api.js"
   },
   "repository": {
     "type": "git",
@@ -83,8 +83,12 @@
     "karma-phantomjs-launcher": "^0.2.1",
     "karma-spec-reporter": "0.0.23",
     "karma-webpack": "^1.7.0",
+    "koa": "^2.0.0-alpha.3",
+    "koa-json": "^1.1.1",
+    "koa-router": "^7.0.1",
     "mocha": "^2.2.5",
     "node-sass": "^3.3.3",
+    "nodemon": "^1.8.1",
     "phantomjs": "^1.9.17",
     "phantomjs-polyfill": "0.0.1",
     "postcss-loader": "^0.8.0",
